// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkTicket should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-ticket bpk-ticket--with-notches"
    role="button"
  >
    <div
      class="bpk-ticket__paper bpk-ticket__main bpk-ticket__main--padded bpk-ticket__main--horizontal bpk-ticket__paper--with-notches"
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </div>
    <div
      aria-hidden="true"
      class="bpk-ticket__punchline bpk-ticket__punchline--vertical-with-notches"
      role="presentation"
    >
      <div
        class="bpk-ticket__notch bpk-ticket__notch--top"
      />
      <div
        class="bpk-ticket__notch bpk-ticket__notch--bottom"
      />
    </div>
    <div
      class="bpk-ticket__paper bpk-ticket__stub bpk-ticket__stub--padded bpk-ticket__stub--horizontal bpk-ticket__paper--with-notches"
    >
      Ticket stub
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkTicket should render correctly with "padded" attribute equal to "false" 1`] = `
<DocumentFragment>
  <div
    class="bpk-ticket bpk-ticket--with-notches"
    role="button"
  >
    <div
      class="bpk-ticket__paper bpk-ticket__main bpk-ticket__main--horizontal bpk-ticket__paper--with-notches"
    >
      <div
        class="bpk-ticket__main-inner bpk-ticket__main-inner--horizontal"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </div>
    </div>
    <div
      aria-hidden="true"
      class="bpk-ticket__punchline bpk-ticket__punchline--vertical-with-notches"
      role="presentation"
    >
      <div
        class="bpk-ticket__notch bpk-ticket__notch--top"
      />
      <div
        class="bpk-ticket__notch bpk-ticket__notch--bottom"
      />
    </div>
    <div
      class="bpk-ticket__paper bpk-ticket__stub bpk-ticket__stub--horizontal bpk-ticket__paper--with-notches"
    >
      <div
        class="bpk-ticket__stub-inner bpk-ticket__stub-inner--horizontal"
      >
        Ticket stub
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkTicket should render correctly with "padded" attribute equal to "false" and a "vertical" attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-ticket bpk-ticket--vertical bpk-ticket--with-notches"
    role="button"
  >
    <div
      class="bpk-ticket__paper bpk-ticket__main bpk-ticket__main--vertical bpk-ticket__paper--with-notches"
    >
      <div
        class="bpk-ticket__main-inner bpk-ticket__main-inner--vertical"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </div>
    </div>
    <div
      aria-hidden="true"
      class="bpk-ticket__punchline bpk-ticket__punchline--horizontal-with-notches"
      role="presentation"
    >
      <div
        class="bpk-ticket__notch bpk-ticket__notch--left"
      />
      <div
        class="bpk-ticket__notch bpk-ticket__notch--right"
      />
    </div>
    <div
      class="bpk-ticket__paper bpk-ticket__stub bpk-ticket__stub--vertical bpk-ticket__paper--with-notches"
    >
      <div
        class="bpk-ticket__stub-inner bpk-ticket__stub-inner--vertical"
      >
        Ticket stub
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkTicket should render correctly with "withNotches" attribute equal to "false" 1`] = `
<DocumentFragment>
  <div
    class="bpk-ticket"
    role="button"
  >
    <div
      class="bpk-ticket__paper bpk-ticket__main bpk-ticket__main--padded bpk-ticket__main--horizontal"
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </div>
    <div
      aria-hidden="true"
      class="bpk-ticket__punchline bpk-ticket__punchline--vertical"
      role="presentation"
    />
    <div
      class="bpk-ticket__paper bpk-ticket__stub bpk-ticket__stub--padded bpk-ticket__stub--horizontal"
    >
      Ticket stub
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkTicket should render correctly with "withNotches" attribute equal to "false" and a "vertical" attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-ticket bpk-ticket--vertical"
    role="button"
  >
    <div
      class="bpk-ticket__paper bpk-ticket__main bpk-ticket__main--padded bpk-ticket__main--vertical"
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </div>
    <div
      aria-hidden="true"
      class="bpk-ticket__punchline bpk-ticket__punchline--horizontal"
      role="presentation"
    />
    <div
      class="bpk-ticket__paper bpk-ticket__stub bpk-ticket__stub--padded bpk-ticket__stub--vertical"
    >
      Ticket stub
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkTicket should render correctly with a "className" attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-ticket custom-class bpk-ticket--with-notches"
    role="button"
  >
    <div
      class="bpk-ticket__paper bpk-ticket__main bpk-ticket__main--padded bpk-ticket__main--horizontal bpk-ticket__paper--with-notches"
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </div>
    <div
      aria-hidden="true"
      class="bpk-ticket__punchline bpk-ticket__punchline--vertical-with-notches"
      role="presentation"
    >
      <div
        class="bpk-ticket__notch bpk-ticket__notch--top"
      />
      <div
        class="bpk-ticket__notch bpk-ticket__notch--bottom"
      />
    </div>
    <div
      class="bpk-ticket__paper bpk-ticket__stub bpk-ticket__stub--padded bpk-ticket__stub--horizontal bpk-ticket__paper--with-notches"
    >
      Ticket stub
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkTicket should render correctly with a "stubClassName" attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-ticket bpk-ticket--with-notches"
    role="button"
  >
    <div
      class="bpk-ticket__paper bpk-ticket__main bpk-ticket__main--padded bpk-ticket__main--horizontal bpk-ticket__paper--with-notches"
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </div>
    <div
      aria-hidden="true"
      class="bpk-ticket__punchline bpk-ticket__punchline--vertical-with-notches"
      role="presentation"
    >
      <div
        class="bpk-ticket__notch bpk-ticket__notch--top"
      />
      <div
        class="bpk-ticket__notch bpk-ticket__notch--bottom"
      />
    </div>
    <div
      class="bpk-ticket__paper bpk-ticket__stub custom-class bpk-ticket__stub--padded bpk-ticket__stub--horizontal bpk-ticket__paper--with-notches"
    >
      Ticket stub
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkTicket should render correctly with a "stubProps" attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-ticket bpk-ticket--with-notches"
    role="button"
  >
    <div
      class="bpk-ticket__paper bpk-ticket__main bpk-ticket__main--padded bpk-ticket__main--horizontal bpk-ticket__paper--with-notches"
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </div>
    <div
      aria-hidden="true"
      class="bpk-ticket__punchline bpk-ticket__punchline--vertical-with-notches"
      role="presentation"
    >
      <div
        class="bpk-ticket__notch bpk-ticket__notch--top"
      />
      <div
        class="bpk-ticket__notch bpk-ticket__notch--bottom"
      />
    </div>
    <div
      class="bpk-ticket__paper bpk-ticket__stub custom-class bpk-ticket__stub--padded bpk-ticket__stub--horizontal bpk-ticket__paper--with-notches"
      foo="bar"
    >
      Ticket stub
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkTicket should render correctly with a "vertical" attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-ticket bpk-ticket--vertical bpk-ticket--with-notches"
    role="button"
  >
    <div
      class="bpk-ticket__paper bpk-ticket__main bpk-ticket__main--padded bpk-ticket__main--vertical bpk-ticket__paper--with-notches"
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </div>
    <div
      aria-hidden="true"
      class="bpk-ticket__punchline bpk-ticket__punchline--horizontal-with-notches"
      role="presentation"
    >
      <div
        class="bpk-ticket__notch bpk-ticket__notch--left"
      />
      <div
        class="bpk-ticket__notch bpk-ticket__notch--right"
      />
    </div>
    <div
      class="bpk-ticket__paper bpk-ticket__stub bpk-ticket__stub--padded bpk-ticket__stub--vertical bpk-ticket__paper--with-notches"
    >
      Ticket stub
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkTicket should render correctly with an "href" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-ticket bpk-ticket--with-notches"
    href="//www.skyscanner.net"
  >
    <div
      class="bpk-ticket__paper bpk-ticket__main bpk-ticket__main--padded bpk-ticket__main--horizontal bpk-ticket__paper--with-notches"
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </div>
    <div
      aria-hidden="true"
      class="bpk-ticket__punchline bpk-ticket__punchline--vertical-with-notches"
      role="presentation"
    >
      <div
        class="bpk-ticket__notch bpk-ticket__notch--top"
      />
      <div
        class="bpk-ticket__notch bpk-ticket__notch--bottom"
      />
    </div>
    <div
      class="bpk-ticket__paper bpk-ticket__stub bpk-ticket__stub--padded bpk-ticket__stub--horizontal bpk-ticket__paper--with-notches"
    >
      Ticket stub
    </div>
  </a>
</DocumentFragment>
`;
